<resources>
    <string name="app_name" translatable="false">Kengen Water</string>

    <string name="kk_app_title">Kengen&#160;</string>
    <string name="kk_app_title_sub">Water</string>

    <string name="kk_splash_skip">SKIP</string>
    <string name="kk_splash_update">UPDATE</string>

    <string name="kk_info">This App do not host any content showing in this app. We are just embed and sharing videos from www.youtube.com. Youtube and Channel owners are the original owner and copyright holder for this content. This app doesn\'t access or use a service or Api in a manner that violates its terms of service. Enagic Company and youtube owners are original owners and copyright holder for these contents. By using this app, you are agree that the owner of this app is not the owner of any content in this app.</string>

    <string name="kk_error_unknown">An unknown error occurred</string>
    <string name="kk_error_try_again">Something went wrong! Please try again.</string>
    <string name="kk_error_try_later">"Something went wrong! Try Again Later."</string>
    <string name="kk_error_no_data">No Data Available …</string>
    <string name="kk_error_no_internet">Please Check Your Internet …</string>
    <string name="kk_error_vpn"><![CDATA[VPN is Connected Please Turn it Off & Try Again !]]></string>

    <string name="facebook_app_id">1030652665745698</string>
    <string name="facebook_client_token">012be60a041b467d427f6fb480d6ae55</string>
</resources>