<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/layout_ad_universal"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/ivBG"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cvSplash"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:background="@drawable/bg_splashlogo"
            android:padding="1dp"
            android:scaleX="0"
            android:scaleY="0"
            android:src="@drawable/ic_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/llText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:alpha="0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivLogo">

            <TextView
                android:id="@+id/txtTitle1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/mfont_medium"
                android:gravity="center"
                android:text="@string/kk_app_title"
                android:textStyle="bold"
                android:textColor="#FFE400"
                android:textSize="@dimen/_20ssp" />

            <TextView
                android:id="@+id/txtTitle2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/mfont_medium"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/kk_app_title_sub"
                android:textColor="#000000"
                android:textSize="@dimen/_20ssp" />

        </LinearLayout>


        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/progress"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llText"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/loader" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="31dp"
            android:fontFamily="cursive"
            android:text="Developed By Eagle Infotech"
            android:textColor="#333"
            android:textSize="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cvUpdate"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorDialog"
        android:visibility="gone">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/bg_box_swhite"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingVertical="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <ImageView
                android:id="@+id/ivUlogo"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_gravity="center"
                android:padding="10dp"
                android:src="@drawable/ic_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtName"
                style="@style/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:gravity="center"
                android:text="@string/app_name"
                app:layout_constraintTop_toBottomOf="@id/ivUlogo" />

            <TextView
                android:id="@+id/txtDes"
                style="@style/txtNormal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:gravity="center"
                android:text="@string/app_name"
                app:layout_constraintTop_toBottomOf="@id/txtName" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/txtDes">

                <TextView
                    android:id="@+id/txtUpdate"
                    style="@style/txtButton"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="5dp"
                    android:background="@drawable/bg_button"
                    android:gravity="center"
                    android:text="@string/kk_splash_update" />

                <TextView
                    android:id="@+id/txtSkip"
                    style="@style/txtButton"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="5dp"
                    android:background="@drawable/bg_button"
                    android:gravity="center"
                    android:text="@string/kk_splash_skip" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>